guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    argocd.argoproj.io/ignore-default-links: "true"
    link.argocd.argoproj.io/external-link: "http://guestbook-ui.internal:30000"
spec:
  rules:
  - host: guestbook-ui.internal # Change to your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
